array.island.Island.scala.error
Erreur de compilation :
Island:6: error: type mismatch;
 found   : Unit
 required: Int
  while (mer2!=num.length-1){
  ^